# soft-copyright-projects

./: .gitignore  README.md
多智能体协同推理与动态任务编排算法平台/: CMakeLists.txt  README.md  capture_screenshots.py  demo_steps.json  design_doc.md  generate_docs.py  main.cpp  run.bat  screenshot_interfaces.md  代码文档.docx  截图自动化方案_可推广版.md  操作手册.docx  申请表信息.txt
